--- a/010_pathways/kinect/kinect_skeleton_multi_draw_lines/index.html
+++ b/010_pathways/kinect/kinect_skeleton_multi_draw_lines/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
-    <script src="https://itp.nyu.edu/kinectron/kinectron.bundle.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-  </head>
-  <body>
-    <script src="Joint.js"></script>
-    <script src="Body.js"></script>
-    <script src="BodyManager.js"></script>
-    <script src="sketch.js"></script>
-  </body>
+
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
+  <script src="https://itp.nyu.edu/kinectron/kinectron.bundle.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8" /> </head>
+
+<body>
+  <script src="sketch.js"></script>
+</body>
+
 </html>
